Do not add jaybird modules to exports