@@ -160,7 +160,6 @@
                         --add-opens java.base/javax.crypto=ALL-UNNAMED
                         -Djdk.attach.allowAttachSelf=true
                         -XX:+StartAttachListener
-                        --add-exports org.firebirdsql.jaybird/org.firebirdsql.cryptoapi.windows.crypt32=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
